# data-driven-astronomy

./: .buildinfo  .gitignore  .yamllint.yaml  LICENSE.md  README.rst  _config.yml  genindex.html  intro.html  markdown-notebooks.html  markdown.html  notebooks.html  objects.inv  pyproject.toml  search.html  searchindex.js
.github/: dependabot.yml
.github/workflows/: main.yaml  yamllint.yaml
_sources/: markdown-notebooks.ipynb
_sources/notebooks/: 5a.ipynb
_sources/notebooks/week2/: 2f.ipynb
_sources/notebooks/week3/: 3.md  3a.ipynb
_sources/week2/: 2_crossmatching.md  2e.md
data_driven_astronomy/: 2a.ipynb  2c.ipynb  _config.yml  _toc.yml
data_driven_astronomy/notebooks/: 5b.ipynb
data_driven_astronomy/notebooks/week2/: 2a.ipynb  2c.ipynb  2d.ipynb
data_driven_astronomy/week2/: 2_crossmatching.md  2b.md
notebooks/: 5a.html  5b.html
notebooks/week2/: 2a.html  2c.html  2d.html  2f.html
notebooks/week3/: 3.html  3a.html
week2/: 2_crossmatching.html  2b.html  2e.html
