[tool.poetry]
name = "data-driven-astronomy"
version = "0.1.0"
description = ""
authors = ["arunkannawadi <kj.arun.kj@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8"
scipy = "^1.8.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
jupyter-book = "^0.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
