[tool.poetry]
name = "data-driven-astronomy"
version = "0.1.0"
description = ""
authors = ["arunkannawadi <kj.arun.kj@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8.*"
scipy = "^1.9.0"
pydotplus = "^2.0.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1"
jupyter-book = "^0.13.1"
pre-commit = "^2.20.0"
yamllint = "^1.27.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
